[package]
name = "bagger"
version = "0.0.0"
authors = ["me@samsartor.com"]

[dependencies]
proc-macro2 = "0.2"
quote = "0.4"
syn =  { version = "0.12", features = ["visit", "extra-traits"] }
lazy_static = "1.0"
failure = "0.1"
mime = "0.2"
mime_guess = "1.8"
easy_uri = { git = "https://github.com/samsartor/easy_uri", version = "0.1" }
