[package]
name = "grab_derive"
version = "0.0.0"
authors = ["me@samsartor.com"]

[lib]
name = "grab_derive"
proc-macro = true

[dependencies]
proc-macro2 = "0.2"
quote = "0.4"
syn = { version = "0.12", features = ["visit", "extra-traits"] }
lazy_static = "^1.0"
grabber_core = { path = "../grabber_core" }
